@@ -1,10 +1,11 @@
 
 5.55  2014-10-28
+  - Deprecated support for data arguments in Mojo::JSON::Pointer.
   - Added access_control_allow_origin, content_language, content_location and
     strict_transport_security methods to Mojo::Headers.
 
 5.54  2014-10-23
-  - Deprecated Object-Oriented Mojo::JSON API.
+  - Deprecated object-oriented Mojo::JSON API.
   - Added auto_decompress attribute to Mojo::Content.
   - Improved Mojo::Content to parse content more defensively.
   - Fixed chunked transfer encoding bug in Mojo::Content.
